--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.IdCard {
+  display: flex;
+  border: 1px solid black;
+  padding: 5px;
+  margin: 10px 5px;
+}
+
+.picture {
+  margin-right: 5px;
+}
+
