--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-.IdCard {
+.border {
   display: flex;
   border: 1px solid black;
   padding: 5px;
@@ -46,12 +46,5 @@
 
 .picture {
   margin-right: 5px;
-}
-
-.greetings {
-  display: flex;
-  border: 1px solid black;
-  padding: 5px;
-  margin: 10px 5px;
 }
 
