--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,17 @@
 .text {
   color: white;
 }
+
+.creditCard {
+  margin: 20px;
+  padding: 30px;
+  width: 200px;
+  border-radius: 10px;
+}
+
+.logo {
+  width: 50px;
+  float: right;
+}
+
+
