--- a/src/App.css
+++ b/src/App.css
@@ -92,4 +92,17 @@
   flex-direction: column;
 }
 
+.likes {
+  padding: 15px 40px;
+  margin: 1rem;
+  color: white;
+  font-size: 1rem;
+}
+
+.clickable {
+  width: 200px;
+  height: 200px;
+  margin: 1rem;
+}
+
 
